# quicksynergy-gtk

./: .tm_project.cache  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  QuickSynergy.desktop  QuickSynergy.desktop.in  QuickSynergy.glade  QuickSynergy.gladep  QuickSynergy.prj.bak  QuickSynergy.pws  README  README.md  THANKS  aclocal.m4  config.h  config.h.cmake  config.h.in  config.status  config.status.lineno  configure  configure.ac  configure.in  libtool
CMakeModules/: FindGettext.cmake
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile  Makefile.am  Makefile.in  callbacks.h  config.h  logo_data.h  misc.h  proc.h  prog_image_data.h
m4/: ChangeLog
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: CMakeLists.txt  ChangeLog  Makevars  POTFILES.in  fr.po  gl_ES.po  pt_BR.gmo  pt_BR.po  quicksynergy.pot
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  config.c  config.h  intl.h  logo_data.h  main.c  proc.c  proc.h  screen_entry.c  screen_entry.h  state.h  synergy_config.c  synergy_config.h  ui.c  ui.h
src/.deps/: main.P
src/logo/: CMakeLists.txt  Makefile.am  Makefile.in
