AC_INIT(src/main.c)
AC_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(quicksynergy, 0.6)

AC_PROG_CC
AC_GNU_SOURCE
IT_PROG_INTLTOOL(0.22)

CFLAGS=""

AC_PATH_PROG(SYNERGYS,synergys,"no")

if test $SYNERGYS = "no"; then
    AC_MSG_ERROR(synergys not installed.)
fi

AC_PATH_PROG(SYNERGYC,synergyc,"no")

if test $SYNERGYC = "no"; then
    AC_MSG_ERROR(synergyc not installed.)
fi

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

AC_C_CONST
AC_TYPE_PID_T

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gethostname mkdir])

AM_PATH_GTK_2_0(2.6.0,,AC_MSG_ERROR(GTK+ >= 2.6.0 not installed.))

ALL_LINGUAS="fr"
AM_GNU_GETTEXT([external])
GETTEXT_PACKAGE=quicksynergy
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[gettext domain])

AC_OUTPUT([Makefile src/Makefile src/logo/Makefile po/Makefile.in])
