AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(quicksynergy, 0.4)

AC_PROG_CC

CFLAGS=""

AC_PATH_PROG(SYNERGYS,synergys,"no")

if test $SYNERGYS = "no"; then
    echo "Could not find synergys."
    exit
fi

AC_PATH_PROG(SYNERGYC,synergyc,"no")

if test $SYNERGYC = "no"; then
    echo "Could not find synergyc."
    exit
fi

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

AC_C_CONST
AC_TYPE_PID_T

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gethostname mkdir])

AM_PATH_GTK_2_0

AC_OUTPUT([Makefile src/Makefile])
