## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

quicksynergy_includedir = $(pkgincludedir)

quicksynergy_include_DATA = \
	logo_data.h\
	callbacks.h\
	misc.h\
	config.h\
	proc.h

EXTRA_DIST = $(quicksynergy_include_DATA)
