## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

quicksynergy_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

quicksynergy_pixmaps_DATA = \
	quicksynergy-icon.png

EXTRA_DIST = $(quicksynergy_pixmaps_DATA)
