## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = quicksynergy

quicksynergy_SOURCES = \
	main.c

quicksynergy_LDFLAGS = 

quicksynergy_LDADD =  \
	$(PACKAGE_LIBS)

